# offat

./: .gitignore  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml  specs-test.json
.github/: CONTRIBUTING.md  FUNDING.yml
.github/workflows/: build-and-push-docker-image-to-dockerhub.yml  dev-push.yml  pypi-publish.yml  release-push.yml
DockerFiles/: backend-api-Dockerfile  backend-api-worker-Dockerfile  base-Dockerfile
offat/: __main__.py  config_data_handler.py  http.py  logger.py  openapi.py  utils.py
offat/api/: app.py  config.py  jobs.py
offat/tester/: data_exposure.py  fuzzer.py  post_test_processor.py  regexs.py  test_generator.py  test_results.py  test_runner.py  tester_utils.py
